# signature

./: .gitignore  LICENSE  README.md
src/: BuildVersion.hpp.in  CMakeLists.txt  Config.cpp  Config.hpp  LoggerManager.cpp  LoggerManager.hpp  PoolManager.hpp  Worker.cpp  Worker.hpp  WorkerManager.cpp  WorkerManager.hpp  main.cpp
src/algo/: HasherFactory.cpp  HasherFactory.hpp  HasherMd5.cpp  HasherMd5.hpp
src/algos/: HasherCrc32.cpp  HasherCrc32.hpp  HasherFactory.cpp  HasherFactory.hpp  HasherMd5.cpp  HasherMd5.hpp  IHasher.hpp
src/common/: Config.cpp  Config.hpp  FileBase.cpp  FileBase.hpp  FileReader.cpp  FileReader.hpp  FileWriter.cpp  FileWriter.hpp  IDeferedQueue.hpp  IThreadProcessor.hpp  Logger.cpp  Logger.hpp  LoggerManager.cpp  LoggerManager.hpp  LoggerMessage.hpp  MpocQueue.cpp  MpocQueue.hpp  MpocQueueItem.hpp  MpocQueueProducer.cpp  MpocQueueProducer.hpp  Pool.hpp  PoolManager.hpp  PoolStorage.hpp  SharedPtrSingleton.hpp  Singletone.hpp  StringFormer.hpp  debug.hpp
